--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,13 +1,5 @@
 <resources>
 
 
-
-
-
-
-
-
-
-
-    <string name="app_name">Photos</string>
+    <string name="app_name">Look Lock</string>
 </resources>
